# image-edit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.flux.yml  docker-compose.override.yml.example  docker-compose.yml  test-dev.sh
server/: .gitignore  Dockerfile  README.md  client_edit.py  client_generate.py  pyproject.toml  server.py
webapp/: Dockerfile  Dockerfile.dev  next.config.ts  package.json  tailwind.config.ts
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: ChatPanel.tsx  HistoryPanel.tsx  ImagePanel.tsx
webapp/src/types/: index.ts
